--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@
                                                 <p>Thodiyoor P.O, Karunagappally, Kollam</p> 
                                                 <p></p> 
                                                 <a href="mailto:ouremail@gmail.com">aurigacek@gmail.com</a> 
-                                                <a href="tel:+148126287560">+48 12 628 75 60</a> 
+                                                <a href="tel:+919400132807">+91 94 000 13 28 07</a> 
                                             </div>                                             
                                             <ul class="modal--options"> 
                                                 <li> 
