--- a/index.html
+++ b/index.html
@@ -192,7 +192,7 @@
                                                     <a href="#0">Instagram</a> 
                                                 </li>                                                 
                                                 <li> 
-                                                    <a href="whatsapp://send?abid=+919400132807&text=Hai%2C%20Auriga!">Send Message</a>
+                                                    <a href="https://api.whatsapp.com/send?phone=+919400132807">Send Message</a>
                                                 </li>                                                 
                                                 <p> <i class="fa fa-whatsapp" aria-hidden="true"></i> Whatsapp</p> 
                                             </ul>                                             
