--- a/index.html
+++ b/index.html
@@ -201,7 +201,7 @@
                                                     <p class="slider1--item-title">SPAS</p> 
                                                     <p class="slider1--item-description">IEEE Student Branch of CEK proudly offers you a realm of exploration through Student Professional Awareness Symposium (SPAS) 2019 .  
                                                     </p>
-                                                    <p><a href="spas.ieeesbcek.org" style="color:#c2f442"><p>REGISTER NOW</p></a></p>  
+                                                    <p><a href="https://spas.ieeesbcek.org" style="color:#c2f442"><p>REGISTER NOW</p></a></p>  
                                                 </a>                                                 
                                             </li> 
                                             <li class="slider1--item slider1--item-right"> 
