--- a/index.html
+++ b/index.html
@@ -599,7 +599,7 @@
                                                     <p class="slider5--item-description"></p> 
                                                 </a>                                                 
                                             </li>                                             
-                                            <li class="slider5--item slider5--item-center"> 
+                                            <li class="slider5--item slider5--item-left"> 
                                                 <a href="#0"> 
                                                     <div class="slider5--item-image"> 
                                                         <img src="assets/img/sports/kiff.jpeg"  alt="KIFF"> 
@@ -607,7 +607,15 @@
                                                     <p class="slider5--item-title">KIFF</p> 
                                                     <p class="slider5--item-description">FOOTBALL</p> 
                                                 </a>                                                 
-                                            </li>                                             
+                                            </li>  <li class="slider5--item slider5--item-center"> 
+                                                <a href="#0"> 
+                                                    <div class="slider5--item-image"> 
+                                                        <img src="assets/img/sports/thball.jpeg"  alt="THROWBALL"> 
+                                                    </div>                                                     
+                                                    <p class="slider5--item-title">THROWBALL</p> 
+                                                    <p class="slider5--item-description">INTERCOLLEGE THROWBALL TOURNAMENT<BR>(GIRLS)</p> 
+                                                </a>                                                 
+                                            </li>                                           
                                             <li class="slider5--item slider5--item-right"> 
                                                 <a href="#0"> 
                                                     <div class="slider5--item-image"> 
