--- a/index.html
+++ b/index.html
@@ -610,7 +610,7 @@
                                             </li>  <li class="slider5--item slider5--item-center"> 
                                                 <a href="#0"> 
                                                     <div class="slider5--item-image"> 
-                                                        <img src="assets/img/sports/thball.jpeg"  alt="THROWBALL"> 
+                                                        <img src="assets/img/sports/thbal.jpeg"  alt="THROWBALL"> 
                                                     </div>                                                     
                                                     <p class="slider5--item-title">THROWBALL</p> 
                                                     <p class="slider5--item-description">INTERCOLLEGE THROWBALL TOURNAMENT<BR>(GIRLS)</p> 
