--- a/index.html
+++ b/index.html
@@ -188,7 +188,7 @@
                                                         <img src="assets/img/workshop/eth.jpeg" alt="ETHICAL HACKING WORKHOP"> 
                                                     </div>                                                     
                                                     <p class="slider1--item-title">ETHICAL HACKING WORKHOP</p> 
-                                                    <p class="slider1--item-description">AURIGA'19 in association with Yukthi powered by CECIA, Department of Computer Science and Engineering
+                                                    <p class="slider1--item-description">Yukthi powered by CECIA, Department of Computer Science and Engineering
                                                     CEK Its a Two-day introduction training programme of Certified ethical hacker course by EC council .</p>
                                                     <p><a href="https://docs.google.com/forms/d/e/1FAIpQLSeP5qIV-B3hAmH3AKUPHS4_It4HltmTY_qgWewfDKbFHZZLpA/viewform" style="color:#7ef738"><p>REGISTER NOW</p></a></p>  
                                                 </a>                                                 
