--- a/index.html
+++ b/index.html
@@ -407,9 +407,7 @@
                                                         <img src="assets/img/contest/wbk.jpeg"  alt="WEB WIZARD"> 
                                                     </div>                                                     
                                                     <p class="slider2--item-title">WEB WIZARD</p> 
-                                                    <p class="slider2--item-description"> Hey gamers! Let's play to win..
-
-                                                    If you think math is hard,  try web design with us AURIGA'19 in association with Yukthi powered by CECIA, Department of Computer Science and Engineering College of Engineering Karunagappally.
+                                                    <p class="slider2--item-description"> If you think math is hard,  try web design with us AURIGA'19 in association with Yukthi powered by CECIA, Department of Computer Science and Engineering College of Engineering Karunagappally.
 
                                                     </p> 
                                                     <p><a href="https://docs.google.com/forms/d/e/1FAIpQLSfJT1feG7lm7IRoNhbKD_XjHkeZGzhWHe1z7iTCuvWe1egDSA/viewform" style="color:#7ef738"><p>REGISTER NOW</p></a></p>
