--- a/index.html
+++ b/index.html
@@ -345,7 +345,6 @@
                                                     </div>                                                     
                                                     <p class="slider2--item-title">MOVPIK</p> 
                                                     <p class="slider2--item-description">The moving picture.. 
-
                                                         Let's carve our names on the bricks of high spirited animation activities! Empower your creativity with an entertaining competition! 
                                                     </p> 
                                                     <p><a href="https://docs.google.com/forms/d/e/1FAIpQLSdHadgtrV9pAZB4jwDLVNfz8ZNwGISlI90HgHVoYaCryinEfg/viewform" style="color:#7ef738"><p>REGISTER NOW</p></a></p>
@@ -379,9 +378,7 @@
                                                         <img src="assets/img/contest/dbg.jpeg"  alt="DEBUGGER"> 
                                                     </div>                                                     
                                                     <p class="slider2--item-title">DEBUGGER</p> 
-                                                    <p class="slider2--item-description">"The Ultimate Bug Finder" ...
-
-                                                    Fuel up to dive deep into an ocean of debugging techniques. Gather up the fragments of codes and startegy and get ready to perform!
+                                                    <p class="slider2--item-description">"The Ultimate Bug Finder"  Gather up the fragments of codes and startegy and get ready to perform!
 
                                                     </p> 
                                                     <p><a href="https://docs.google.com/forms/d/e/1FAIpQLSeOM_jIIZBVp3ty58IFK8Q25jKoMUyIe1h11ZIzt9gHTV2nzQ/viewform" style="color:#7ef738"><p>REGISTER NOW</p></a></p>
@@ -393,9 +390,7 @@
                                                         <img src="assets/img/contest/khl.jpeg"  alt="KHILADI"> 
                                                     </div>                                                     
                                                     <p class="slider2--item-title">KHILADI</p> 
-                                                    <p class="slider2--item-description"> Hey gamers! Let's play to win..
-
-                                                    Elevate your spirit; unleash the power of defence and tackling. Clasp onto the hall of focus and skills and achieve your goal
+                                                    <p class="slider2--item-description"> Hey gamers! Let's play to win.. s Elevate your spirit; unleash the power of defence and tackling. Clasp onto the hall of focus and skills and achieve your goal
 
                                                     </p> 
                                                     <p><a href="https://docs.google.com/forms/d/e/1FAIpQLSdUqP2B_5wHR-UlgAn0hlmuOgVda9ZytBJYpspn70EUvIcgtA/viewform" style="color:#7ef738"><p>REGISTER NOW</p></a></p>
@@ -407,7 +402,7 @@
                                                         <img src="assets/img/contest/wbk.jpeg"  alt="WEB WIZARD"> 
                                                     </div>                                                     
                                                     <p class="slider2--item-title">WEB WIZARD</p> 
-                                                    <p class="slider2--item-description"> If you think math is hard,  try web design with us AURIGA'19 in association with Yukthi powered by CECIA, Department of Computer Science and Engineering College of Engineering Karunagappally.
+                                                    <p class="slider2--item-description"> Try web design with us AURIGA'19 in association with Yukthi powered by CECIA, Department of Computer Science and Engineering College of Engineering Karunagappally.
 
                                                     </p> 
                                                     <p><a href="https://docs.google.com/forms/d/e/1FAIpQLSfJT1feG7lm7IRoNhbKD_XjHkeZGzhWHe1z7iTCuvWe1egDSA/viewform" style="color:#7ef738"><p>REGISTER NOW</p></a></p>
@@ -421,7 +416,7 @@
                                                     </div>                                                     
                                                     <p class="slider2--item-title">PITCH IT!!</p> 
                                                     <p class="slider2--item-description"> AURIGA  2k19 -Idea pitching
-                                                    <br> -will give you a platform to simply express your ideas on a dias and plant the seed in the minds of everyone present there.
+                                                    -will give you a platform to simply express your ideas on a dias and plant the seed in the minds of everyone present there.
 
                                                     </p> 
                                                     <p><a href="  https://docs.google.com/forms/d/e/1FAIpQLScE2s27m3xvlQvbXPnOV8BJk8Dee67Mpiu3K78IzTSwf6cFrg/viewform?usp=sf_link" style="color:#7ef738"><p>REGISTER NOW</p></a></p>
@@ -457,7 +452,7 @@
                                                         <img src="assets/img/contest/eld.jpeg"  alt="EL DORADO"> 
                                                     </div>                                                     
                                                     <p class="slider2--item-title">EL -DORADO</p> 
-                                                    <p class="slider2--item-description">ELEKTOR the ɑssociɑtion of Depɑrtment of Electricɑl ɑnd Electronics Engineering of College of Engineering Kɑrunɑgɑppɑlly is orgɑnizing ɑn Intercollegiɑte MEGɑ TREɑSURE HUNT EL -DORɑDO on 5th MɑY 2019
+                                                    <p class="slider2--item-description">ELEKTOR the ɑssociɑtion of Depɑrtment of Electricɑl ɑnd Electronics Engineering of CEK is orgɑnizing ɑn Intercollegiɑte MEGɑ TREɑSURE HUNT EL -DORɑDO on 5th MɑY 2019
                                                     </p> 
                                                     <p style="color:orange;">Spot Registrɑtion</p></a></p>
                                                 </a>                                                
@@ -480,8 +475,7 @@
                                                         <img src="assets/img/contest/bhs.jpeg"  alt="AR-HUNT"> 
                                                     </div>                                                     
                                                     <p class="slider2--item-title">BAHAS</p> 
-                                                    <p class="slider2--item-description">  IEDC CEK proudly prsents you  BAHAS in association with AURIGA'19
-                                                    A technical debate competition to identify the confidence level , communication skills and technical knowledge of  students.
+                                                    <p class="slider2--item-description">  IEDC CEK prsents you  BAHAS in association with AURIGA'19 A technical debate competition to identify the confidence level ,communication skills and technical knowledge of students.
 
                                                     </p> 
                                                     <p><a href="https://docs.google.com/forms/d/e/1FAIpQLSfHf-WyrCHil5lJ5Hq_uCw4TINsyjsT9dKAVMCLSpzOU0DRWg/viewform?usp=sf_link" style="color:#7ef738"><p>REGISTER NOW</p></a></p>
@@ -493,7 +487,7 @@
                                                         <img src="assets/img/contest/enrg.jpeg"  alt="ENERGION 2.0"> 
                                                     </div>                                                     
                                                     <p class="slider2--item-title">ENERGION 2.0</p> 
-                                                    <p class="slider2--item-description">ELEKTOR the ɑssociɑtion of Electricɑl ɑnd Electronics Engineering depɑrtment,CEK is orgɑnizing ɑn Intercollegiɑte Quiz Competition - ENERGION 2.0 on 5th MɑY 2019 
+                                                    <p class="slider2--item-description">ELEKTOR the ɑssociɑtion of Electricɑl ɑnd Electronics Engineering depɑrtment,CEK is orgɑnizing ɑn Intercollegiɑte Quiz Competition-ENERGION 2.0
                                                     </p> 
                                                     <p><a href="https://docs.google.com/forms/d/e/1FɑIpQLSdlOk5ocMj49muzt1i5x9WxQ7Fw2dVBpOO1iwXtwMqEs9eR6w/viewform?usp=sf_link" style="color:#7ef738"><p>REGISTER NOW</p></a></p>
                                                 </a>                                                 
