--- a/index.html
+++ b/index.html
@@ -475,7 +475,7 @@
                                                         <img src="assets/img/contest/bhs.jpeg"  alt="AR-HUNT"> 
                                                     </div>                                                     
                                                     <p class="slider2--item-title">BAHAS</p> 
-                                                    <p class="slider2--item-description">  IEDC CEK prsents you  BAHAS in association with AURIGA'19 A technical debate competition to identify the confidence level ,communication skills and technical knowledge of students.
+                                                    <p class="slider2--item-description">IEDC CEK prsents you  BAHAS A technical debate competition to identify the confidence level ,communication skills and technical knowledge of students.
 
                                                     </p> 
                                                     <p><a href="https://docs.google.com/forms/d/e/1FAIpQLSfHf-WyrCHil5lJ5Hq_uCw4TINsyjsT9dKAVMCLSpzOU0DRWg/viewform?usp=sf_link" style="color:#7ef738"><p>REGISTER NOW</p></a></p>
