--- a/index.html
+++ b/index.html
@@ -390,7 +390,7 @@
                                                         <img src="assets/img/contest/khl.jpeg"  alt="KHILADI"> 
                                                     </div>                                                     
                                                     <p class="slider2--item-title">KHILADI</p> 
-                                                    <p class="slider2--item-description"> Hey gamers! Let's play to win.. s Elevate your spirit; unleash the power of defence and tackling. Clasp onto the hall of focus and skills and achieve your goal
+                                                    <p class="slider2--item-description"> Hey gamers! Let's play to win... Elevate your spirit; unleash the power of defence and tackling. Clasp onto the hall of focus and skills and achieve your goal
 
                                                     </p> 
                                                     <p><a href="https://docs.google.com/forms/d/e/1FAIpQLSdUqP2B_5wHR-UlgAn0hlmuOgVda9ZytBJYpspn70EUvIcgtA/viewform" style="color:#7ef738"><p>REGISTER NOW</p></a></p>
@@ -402,7 +402,7 @@
                                                         <img src="assets/img/contest/wbk.jpeg"  alt="WEB WIZARD"> 
                                                     </div>                                                     
                                                     <p class="slider2--item-title">WEB WIZARD</p> 
-                                                    <p class="slider2--item-description"> Try web design with us AURIGA'19 in association with Yukthi powered by CECIA, Department of Computer Science and Engineering College of Engineering Karunagappally.
+                                                    <p class="slider2--item-description"> Try web design with us AURIGA'19 in association with Yukthi powered by CECIA, Department of Computer Science and Engineering CEK.
 
                                                     </p> 
                                                     <p><a href="https://docs.google.com/forms/d/e/1FAIpQLSfJT1feG7lm7IRoNhbKD_XjHkeZGzhWHe1z7iTCuvWe1egDSA/viewform" style="color:#7ef738"><p>REGISTER NOW</p></a></p>
@@ -415,7 +415,7 @@
                                                         <img src="assets/img/contest/pit.jpeg"  alt="PITCH IT!!"> 
                                                     </div>                                                     
                                                     <p class="slider2--item-title">PITCH IT!!</p> 
-                                                    <p class="slider2--item-description"> AURIGA  2k19 -Idea pitching
+                                                    <p class="slider2--item-description">Idea pitching
                                                     -will give you a platform to simply express your ideas on a dias and plant the seed in the minds of everyone present there.
 
                                                     </p> 
@@ -439,7 +439,7 @@
                                                     <div class="slider2--item-image"> 
                                                         <img src="assets/img/contest/bpl.jpeg"  alt="B-PLAN"> 
                                                     </div>                                                     
-                                                    <p class="slider2--item-title">B-PLAN<BR>HACKATHON</p> 
+                                                    <p class="slider2--item-title">B-PLAN</p> 
                                                     <p class="slider2--item-description"> This will give you a platform to simply express your  business ideas on a dias and plant the seed in the minds of everyone present there.
 
                                                     </p> 
@@ -452,7 +452,7 @@
                                                         <img src="assets/img/contest/eld.jpeg"  alt="EL DORADO"> 
                                                     </div>                                                     
                                                     <p class="slider2--item-title">EL -DORADO</p> 
-                                                    <p class="slider2--item-description">ELEKTOR the ɑssociɑtion of Depɑrtment of Electricɑl ɑnd Electronics Engineering of CEK is orgɑnizing ɑn Intercollegiɑte MEGɑ TREɑSURE HUNT EL -DORɑDO on 5th MɑY 2019
+                                                    <p class="slider2--item-description">Intercollegiɑte MEGɑ TREɑSURE HUNT EL -DORɑDO on 5th MɑY 2019
                                                     </p> 
                                                     <p style="color:orange;">Spot Registrɑtion</p></a></p>
                                                 </a>                                                
@@ -475,7 +475,7 @@
                                                         <img src="assets/img/contest/bhs.jpeg"  alt="AR-HUNT"> 
                                                     </div>                                                     
                                                     <p class="slider2--item-title">BAHAS</p> 
-                                                    <p class="slider2--item-description">IEDC CEK prsents you  BAHAS A technical debate competition to identify the confidence level ,communication skills and technical knowledge of students.
+                                                    <p class="slider2--item-description">A technical debate competition to identify the confidence level ,communication skills and technical knowledge of students.
 
                                                     </p> 
                                                     <p><a href="https://docs.google.com/forms/d/e/1FAIpQLSfHf-WyrCHil5lJ5Hq_uCw4TINsyjsT9dKAVMCLSpzOU0DRWg/viewform?usp=sf_link" style="color:#7ef738"><p>REGISTER NOW</p></a></p>
