--- a/index.html
+++ b/index.html
@@ -390,7 +390,7 @@
                                                         <img src="assets/img/contest/khl.jpeg"  alt="KHILADI"> 
                                                     </div>                                                     
                                                     <p class="slider2--item-title">KHILADI</p> 
-                                                    <p class="slider2--item-description"> Hey gamers! Let's play to win... Elevate your spirit; unleash the power of defence and tackling. Clasp onto the hall of focus and skills and achieve your goal
+                                                    <p class="slider2--item-description"> Hey gamers! Let's play to win...  unleash the power of defence and tackling. Clasp onto the hall of focus and skills and achieve your goal
 
                                                     </p> 
                                                     <p><a href="https://docs.google.com/forms/d/e/1FAIpQLSdUqP2B_5wHR-UlgAn0hlmuOgVda9ZytBJYpspn70EUvIcgtA/viewform" style="color:#7ef738"><p>REGISTER NOW</p></a></p>
@@ -416,7 +416,7 @@
                                                     </div>                                                     
                                                     <p class="slider2--item-title">PITCH IT!!</p> 
                                                     <p class="slider2--item-description">Idea pitching
-                                                    -will give you a platform to simply express your ideas on a dias and plant the seed in the minds of everyone present there.
+                                                    -will give you a platform to simply express your ideas on a dias and in the minds of everyone present there.
 
                                                     </p> 
                                                     <p><a href="  https://docs.google.com/forms/d/e/1FAIpQLScE2s27m3xvlQvbXPnOV8BJk8Dee67Mpiu3K78IzTSwf6cFrg/viewform?usp=sf_link" style="color:#7ef738"><p>REGISTER NOW</p></a></p>
@@ -428,7 +428,7 @@
                                                         <img src="assets/img/contest/rvh.jpeg"  alt="ROBO VS HUMANITY"> 
                                                     </div>                                                     
                                                     <p class="slider2--item-title">ROBO VS HUMANITY<BR>HACKATHON</p> 
-                                                    <p class="slider2--item-description"> ASECTRON, Electronics and communication engineering department association of College of Engineering Karunagapally.
+                                                    <p class="slider2--item-description"> ASECTRON, Electronics and communication engineering department association of CEK.
 
                                                     </p> 
                                                     <p><a href="https://www.yepdesk.com/robo-vs-humanity" style="color:#7ef738"><p>REGISTER NOW</p></a></p>
@@ -487,7 +487,7 @@
                                                         <img src="assets/img/contest/enrg.jpeg"  alt="ENERGION 2.0"> 
                                                     </div>                                                     
                                                     <p class="slider2--item-title">ENERGION 2.0</p> 
-                                                    <p class="slider2--item-description">ELEKTOR the ɑssociɑtion of Electricɑl ɑnd Electronics Engineering depɑrtment,CEK is orgɑnizing ɑn Intercollegiɑte Quiz Competition-ENERGION 2.0
+                                                    <p class="slider2--item-description">Intercollegiɑte Quiz Competition-ENERGION 2.0
                                                     </p> 
                                                     <p><a href="https://docs.google.com/forms/d/e/1FɑIpQLSdlOk5ocMj49muzt1i5x9WxQ7Fw2dVBpOO1iwXtwMqEs9eR6w/viewform?usp=sf_link" style="color:#7ef738"><p>REGISTER NOW</p></a></p>
                                                 </a>                                                 
