--- a/index.html
+++ b/index.html
@@ -390,7 +390,7 @@
                                                         <img src="assets/img/contest/khl.jpeg"  alt="KHILADI"> 
                                                     </div>                                                     
                                                     <p class="slider2--item-title">KHILADI</p> 
-                                                    <p class="slider2--item-description"> Hey gamers! Let's play to win...  unleash the power of defence and tackling. Clasp onto the hall of focus and skills and achieve your goal
+                                                    <p class="slider2--item-description"> Hey gamers! Let's play to win...  unleash the power of defence and tackling. Clasp onto the skills and achieve your goal
 
                                                     </p> 
                                                     <p><a href="https://docs.google.com/forms/d/e/1FAIpQLSdUqP2B_5wHR-UlgAn0hlmuOgVda9ZytBJYpspn70EUvIcgtA/viewform" style="color:#7ef738"><p>REGISTER NOW</p></a></p>
