--- a/index.html
+++ b/index.html
@@ -199,7 +199,7 @@
                                                         <img src="assets/img/workshop/sps.jpeg" alt="SPAS"> 
                                                     </div>                                                     
                                                     <p class="slider1--item-title">SPAS</p> 
-                                                    <p class="slider1--item-description">IEEE Student Branch of CEK proudly offers you a realm of exploration through Student Professional Awareness Symposium (SPAS) 2019 .  
+                                                    <p class="slider1--item-description">IEEE SB of CEK proudly offers you a realm of exploration through Student Professional Awareness Symposium (SPAS) 2019 .  
                                                     </p>
                                                     <p><a href="https://spas.ieeesbcek.org" style="color:#c2f442"><p>REGISTER NOW</p></a></p>  
                                                 </a>                                                 
