--- a/index.html
+++ b/index.html
@@ -367,7 +367,7 @@
                                                         <img src="assets/img/contest/gm.jpeg"  alt="PLAYMAKER"> 
                                                     </div>                                                     
                                                     <p class="slider2--item-title">PLAYMAKER</p> 
-                                                    <p class="slider2--item-description">Let's get enlivened as the electrifying vibe of gaming awaits your attention! Get yourself charged and let your talent explode at the venue!
+                                                    <p class="slider2--item-description">Let's get enlivened as the electrifying vibe of gaming awaits your attention!  let your talent explode at the venue!
                                                     </p> 
                                                     <p><a href=" https://docs.google.com/forms/d/e/1FAIpQLSe3mH8PftW_UTTEqMb9EbrdAvpOp0F0otYqfGBersfHEPktew/viewform" style="color:#7ef738"><p>REGISTER NOW</p></a></p>
                                                 </a>                                                 
