--- a/index.html
+++ b/index.html
@@ -322,7 +322,7 @@
                                                         <img src="assets/img/contest/rc.jpeg"  alt="REVERSE CODING"> 
                                                     </div>                                                     
                                                     <p class="slider2--item-title">REVERSE CODING</p> 
-                                                    <p class="slider2--item-description">The contest is conducted to reveal the programming ability of the contestants. The participants need to solve a given problem within a given time constrain. 
+                                                    <p class="slider2--item-description">The contest is conducted to reveal the programming ability of the contestants.
                                                     </p> 
                                                     <p><a href="#" style="color:#7ef738"><p>REGISTER NOW</p></a></p>
                                                 </a>                                                 
@@ -333,7 +333,7 @@
                                                         <img src="assets/img/contest/sps.jpeg"  alt="IDEA PITCHING"> 
                                                     </div>                                                     
                                                     <p class="slider2--item-title">IDEA PITCHING</p> 
-                                                    <p class="slider2--item-description">SPAS in association with IEEE SB CEK brings you a reflecting platform to sculpt your ideas and induce  creativity through an Idea Pitching competition. 
+                                                    <p class="slider2--item-description">Reflecting platform to sculpt your ideas and induce  creativity through an Idea Pitching competition. 
                                                     </p> 
                                                     <p><a href="spas.ieeesbcek.org" style="color:#7ef738"><p>REGISTER NOW</p></a></p>
                                                 </a>                                                 
@@ -345,7 +345,7 @@
                                                     </div>                                                     
                                                     <p class="slider2--item-title">MOVPIK</p> 
                                                     <p class="slider2--item-description">The moving picture.. 
-                                                        Let's carve our names on the bricks of high spirited animation activities! Empower your creativity with an entertaining competition! 
+                                                        Let's carve our names on  animation activities! 
                                                     </p> 
                                                     <p><a href="https://docs.google.com/forms/d/e/1FAIpQLSdHadgtrV9pAZB4jwDLVNfz8ZNwGISlI90HgHVoYaCryinEfg/viewform" style="color:#7ef738"><p>REGISTER NOW</p></a></p>
                                                 </a>                                                 
@@ -356,7 +356,7 @@
                                                         <img src="assets/img/contest/cm.jpeg"  alt="CODE MANIAC"> 
                                                     </div>                                                     
                                                     <p class="slider2--item-title">CODE MANIAC</p> 
-                                                    <p class="slider2--item-description">Are you an ultimate coder? If you can turn coffee to code.. AURIGA'19 in association with Yukthi  powered by CECIA,  Department of Computer Science and Engineering CEK
+                                                    <p class="slider2--item-description">Are you an ultimate coder? Yukthi  powered by CECIA,  Department of Computer Science and Engineering CEK
                                                     </p> 
                                                     <p><a href="https://docs.google.com/forms/d/e/1FAIpQLSdSBwmgCK3WLB47LNraayBLVY1o2mHf9ACFPUraeOuK4qCHgw/viewform" style="color:#7ef738"><p>REGISTER NOW</p></a></p>
                                                 </a>                                                 
