--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <img src="assets/img/logo.png" alt="Global">
     <p>Global</p>
   </a>
-  <p class="device-notification--message">Global has so much to offer that we must request you orient your device to portrait or find a larger screen. You won't be disappointed.</p>
+  <p class="device-notification--message">Global has so much to offer that we must request you to orient your device to portrait or find a larger screen. You won't be disappointed.</p>
 </div>
 
 <div class="perspective effect-rotate-left">
