--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   <meta name="description" content="HTML5 website template">
   <meta name="keywords" content="global, template, html, sass, jquery">
   <meta name="author" content="Bucky Maler">
+  <!-- css file link -->
   <link rel="stylesheet" href="assets/css/main.css">
 </head>
 <body>
@@ -271,7 +272,7 @@
     <li>Hire us</li>
   </ul>
 </div>
-
+<!-- link of ajax, jquery, assests -->
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.4/jquery.min.js"></script>
 <script>window.jQuery || document.write('<script src="assets/js/vendor/jquery-2.2.4.min.js"><\/script>')</script>
 <script src="assets/js/functions-min.js"></script>
