--- a/index.html
+++ b/index.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <title>Global</title>
+  <title>ArtGuru - Growth Studio</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="description" content="HTML5 website template">
-  <meta name="keywords" content="global, template, html, sass, jquery">
-  <meta name="author" content="Bucky Maler">
+  <meta name="keywords" content="Growth Studio, Growth Hacking, Startups, Artificial Intelligence, jquery">
+  <meta name="ArtGuru" content="Melek Gharbi">
   <link rel="stylesheet" href="assets/css/main.css">
 </head>
 <body>
@@ -48,7 +48,7 @@
           <li class="l-section section section--is-active">
             <div class="intro">
               <div class="intro--banner">
-                <h1>Your next<br>interactive<br>experience</h1>
+                <h1>Launch.<br>Scale.<br>Win.</h1>
                 <button class="cta">Hire Us
                   <svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 150 118" style="enable-background:new 0 0 150 118;" xml:space="preserve">
                   <g transform="translate(0.000000,118.000000) scale(0.100000,-0.100000)">
@@ -61,16 +61,16 @@
               </div>
               <div class="intro--options">
                 <a href="#0">
-                  <h3>Metiew &amp; Smith</h3>
-                  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit sed do.</p>
+                  <h3>Scalable</h3>
+                  <p>Join us in our guide to get simple, digestible lessons on ways to grow your business. We’ll tell you which tactics have worked for us, and how to apply these hacks to your own business.</p>
                 </a>
                 <a href="#0">
-                  <h3>Fantasy interactive</h3>
-                  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit sed do.</p>
+                  <h3>Measurable</h3>
+                  <p>We unite the finest minds and the best online tools to help you build your audience.</p>
                 </a>
                 <a href="#0">
-                  <h3>Paul &amp; shark</h3>
-                  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit sed do.</p>
+                  <h3>A.I.-driven Growth</h3>
+                  <p>ArtGuru helps companies launch and scale their products using growth hacking, artificial intelligence, advanced analytics, automatic lead generation and other innovative techniques. We use powerful digital marketing hacks to help your start-up's growth rate.</p>
                 </a>
               </div>
             </div>
