--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
               <div class="intro--options">
                 <a href="#0">
                   <h3>Scalable</h3>
-                  <p>Join us in our guide to get simple, digestible lessons on ways to grow your business. We’ll tell you which tactics have worked for us, and how to apply these hacks to your own business.</p>
+                  <p>We’ll tell you which tactics have worked for us, and how to apply these hacks to your own business.</p>
                 </a>
                 <a href="#0">
                   <h3>Measurable</h3>
@@ -70,7 +70,7 @@
                 </a>
                 <a href="#0">
                   <h3>A.I.-driven Growth</h3>
-                  <p>ArtGuru helps companies launch and scale their products using growth hacking, artificial intelligence, advanced analytics, automatic lead generation and other innovative techniques. We use powerful digital marketing hacks to help your start-up's growth rate.</p>
+                  <p>ArtGuru helps companies launch and scale their products using growth hacking, artificial intelligence, advanced analytics.</p>
                 </a>
               </div>
             </div>
