--- a/index.html
+++ b/index.html
@@ -9,6 +9,17 @@
   <meta name="keywords" content="Growth Studio, Growth Hacking, Startups, Artificial Intelligence, jquery">
   <meta name="ArtGuru" content="Melek Gharbi">
   <link rel="stylesheet" href="assets/css/main.css">
+  <!-- Favicon start -->
+  <link rel="apple-touch-icon" sizes="180x180" href="/assets/img/favicon/apple-touch-icon.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="/assets/img/favicon/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="/assets/img/favicon/favicon-16x16.png">
+  <link rel="manifest" href="/assets/img/favicon/site.webmanifest">
+  <link rel="mask-icon" href="/assets/img/favicon/safari-pinned-tab.svg" color="#5bbad5">
+  <link rel="shortcut icon" href="/assets/img/favicon/favicon.ico">
+  <meta name="msapplication-TileColor" content="#da532c">
+  <meta name="msapplication-config" content="/assets/img/favicon/browserconfig.xml">
+  <meta name="theme-color" content="#ffffff">
+  <!-- Favicon end -->
 </head>
 <body>
 
