changed work section added client logo and desc

--- a/index.html
+++ b/index.html
@@ -92,30 +92,30 @@
               <div class="work--lockup">
                 <ul class="slider">
                   <li class="slider--item slider--item-left">
-                    <a href="#0">
+                    <a href="https://www.eluproduitdelanneealgerie.com/elu-produit-de-lannee/" target="_blank">
                       <div class="slider--item-image">
-                        <img src="assets/img/work-victory.jpg" alt="Victory">
+                        <img src="assets\img\product-of-the-year.png" alt="Victory">
                       </div>
-                      <p class="slider--item-title">Victory</p>
-                      <p class="slider--item-description">Lorem ipsum dolor sit amet, consectetur adipisicing elit sed do.</p>
+                      <p class="slider--item-title">Product Of The Year Algeria</p>
+                      <p class="slider--item-description">Market penetration &amp; Lead Acquisition</p>
                     </a>
                   </li>
                   <li class="slider--item slider--item-center">
                     <a href="#0">
                       <div class="slider--item-image">
-                        <img src="assets/img/work-metiew-smith.jpg" alt="Metiew and Smith">
+                        <img src="assets\img\logo-sintegra-group.png" alt="Sintegra Group">
                       </div>
-                      <p class="slider--item-title">Metiew &amp; Smith</p>
-                      <p class="slider--item-description">Lorem ipsum dolor sit amet, consectetur adipisicing elit sed do.</p>
+                      <p class="slider--item-title">Sintegra Group</p>
+                      <p class="slider--item-description">Full Stack Growth Hacking & Acquisition Scale</p>
                     </a>
                   </li>
                   <li class="slider--item slider--item-right">
-                    <a href="#0">
+                    <a href="http://hifee.co/" target="_blank">
                       <div class="slider--item-image">
-                        <img src="assets/img/work-alex-nowak.jpg" alt="Alex Nowak">
+                        <img src="assets\img\Logo-HIFEE--1.png" alt="Hire From Everywhere Everyday">
                       </div>
-                      <p class="slider--item-title">Alex Nowak</p>
-                      <p class="slider--item-description">Lorem ipsum dolor sit amet, consectetur adipisicing elit sed do.</p>
+                      <p class="slider--item-title">Hifee</p>
+                      <p class="slider--item-description">Market Validation &amp; Lead Acquisition</p>
                     </a>
                   </li>
                 </ul>
