changed career and contact section

--- a/index.html
+++ b/index.html
@@ -143,7 +143,8 @@
             <div class="about">
               <div class="about--banner">
                 <h2>We<br>believe in<br>passionate<br>people</h2>
-                <a href="#0">Career
+                <!--Typeform embed code, the script for making the slider work is just above the closing of body section-->
+                <a class="typeform-share link" href="https://form.typeform.com/to/iKFJ8FM7?utm_source=art-guru.tech&utm_medium=career-btn&utm_content=xxxxx&typeform-medium=embed-snippet" data-mode="drawer_right" data-hide-headers="true" data-submit-close-delay="2" target="_blank">Career
                   <span>
                     <svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 150 118" style="enable-background:new 0 0 150 118;" xml:space="preserve">
                     <g transform="translate(0.000000,118.000000) scale(0.100000,-0.100000)">
@@ -172,14 +173,14 @@
               <div class="contact--lockup">
                 <div class="modal">
                   <div class="modal--information">
-                    <p>Pawia 5, 31-154 Kraków, Poland</p>
-                    <a href="mailto:ouremail@gmail.com">ouremail@gmail.com</a>
-                    <a href="tel:+148126287560">+48 12 628 75 60</a>
+                    <p>11 Palm Street, Boumhel, Tunis</p>
+                    <a href="mailto:ouremail@gmail.com">contact+website@art-guru.tech</a>
+                    <a href="tel:+148126287560">+216 24 26 60 06</a>
                   </div>
                   <ul class="modal--options">
-                    <li><a href="#0">Bēhance</a></li>
-                    <li><a href="#0">dribbble</a></li>
-                    <li><a href="mailto:ouremail@gmail.com">Contact Us</a></li>
+                    <li><a href="#0">LinkedIn</a></li>
+                    <li><a href="https://wa.link/le9nw8">WhatsApp</a></li>
+                    <li><a href="mailto:contact+website@art-guru.tech">Contact Us</a></li>
                   </ul>
                 </div>
               </div>
@@ -286,5 +287,10 @@
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.4/jquery.min.js"></script>
 <script>window.jQuery || document.write('<script src="assets/js/vendor/jquery-2.2.4.min.js"><\/script>')</script>
 <script src="assets/js/functions-min.js"></script>
+<!--Typeform Embed code script-->
+<script> 
+(function() 
+{ var qs,js,q,s,d=document, gi=d.getElementById, ce=d.createElement, gt=d.getElementsByTagName, id="typef_orm_share", b="https://embed.typeform.com/"; 
+if(!gi.call(d,id)){ js=ce.call(d,"script"); js.id=id; js.src=b+"embed.js"; q=gt.call(d,"script")[0]; q.parentNode.insertBefore(js,q) } })() </script>
 </body>
 </html>
